# backup

./: .gitignore  README.md  collector.sh  decrypt.py  main.py  pyproject.toml  run.sh
